file(GLOB sources "*.hpp" "*.cpp")
if(FILESERVER_HAS_SQLITE)
	set(sources ${sources} "${CMAKE_CURRENT_SOURCE_DIR}/sqlite3/sqlite.cpp")
endif()
set(formatted ${formatted} ${sources} PARENT_SCOPE)
add_executable(unit_test ${sources})
target_link_libraries(unit_test client ${CONAN_LIBS} ${Boost_LIBRARIES} ${SQLPP11SQLITE3_LIBRARIES} ${SQLITE_LIBRARIES})
